# libm2k

./: .gitignore  .travis.yml  53-adi-m2k-usb.rules  CMakeLists.txt  Distribution.xml.cmakein  LICENSE  README.md  analog_2enums_8hpp.html  analog_2enums_8hpp__dep__incl.map  analog_2enums_8hpp__dep__incl.md5  analog_2enums_8hpp__incl.map  analog_2enums_8hpp__incl.md5  analog_2enums_8hpp_source.html  annotated.html  appveyor.yml  azure-pipelines.yml  classes.html  classlibm2k_1_1_m2k_hardware_trigger-members.html  classlibm2k_1_1_m2k_hardware_trigger.html  classlibm2k_1_1analog_1_1_d_m_m-members.html  classlibm2k_1_1analog_1_1_d_m_m.html  classlibm2k_1_1analog_1_1_m2k_analog_in-members.html  classlibm2k_1_1analog_1_1_m2k_analog_in.html  classlibm2k_1_1analog_1_1_m2k_analog_out-members.html  classlibm2k_1_1analog_1_1_m2k_analog_out.html  classlibm2k_1_1analog_1_1_m2k_power_supply-members.html  classlibm2k_1_1analog_1_1_m2k_power_supply.html  classlibm2k_1_1context_1_1_context-members.html  classlibm2k_1_1context_1_1_context.html  classlibm2k_1_1context_1_1_context__inherit__graph.map  classlibm2k_1_1context_1_1_context__inherit__graph.md5  classlibm2k_1_1context_1_1_m2k-members.html  classlibm2k_1_1context_1_1_m2k.html  classlibm2k_1_1context_1_1_m2k__coll__graph.map  classlibm2k_1_1context_1_1_m2k__coll__graph.md5  classlibm2k_1_1context_1_1_m2k__inherit__graph.md5  classlibm2k_1_1digital_1_1_m2k_digital-members.html  classlibm2k_1_1digital_1_1_m2k_digital.html  context_8hpp_source.html  contextbuilder_8hpp_source.html  (+135 more)
bindings/csharp/: AssemblyInfo.cs.in  CMakeLists.txt  README.md  key.snk  libm2k-sharp.dll.config.cmakein  libm2k-sharp.pc.cmakein
bindings/csharp/examples/: analog.cs  digital.cs  digital_stream_example.cs  i2c.cs  powersupply.cs  spi.cs  uart.cs  voltmeter.cs
bindings/python/: CMakeLists.txt  README.md  libm2k.i  setup.py.cmakein
bindings/python/calibration/: README.md  generate_temperature_calib_lut.py
bindings/python/examples/: analog.py  analog_raw_bytes.py  analog_sequential_triggering.py  analog_triggered_output.py  analogin_sync_2m2ks.py  audio_flip.py  dc_sweep.py  digital.py  digitalin_sync_2m2ks.py  expose_spi.py  external_clocksource.py  external_clocksource_example.py  i2c.py  mixed_signal_view.py  powersupply.py  spi.py  uart.py  voltmeter.py
doc/: CMakeLists.txt  Doxyfile_API.in  mainpage.dox
doc/sphinx/: make.bat
doc/sphinx/source/: conf.py.in  examples.rst  index.rst  libm2k.rst
examples/: CMakeLists.txt  connect.cpp  generic_connect.cpp  generic_dmm.cpp  m2k_connect.cpp  m2k_ps.cpp  siggen.cpp
examples/analog/: CMakeLists.txt  analog_in_out.cpp  analog_out_set_voltage.cpp  getSamples.cpp  main.cpp  stream_test_adc.cpp  stream_test_dac.cpp  streaming_one_channel.cpp  streaming_synchronized.cpp  sync_stream_diff_frequencies.cpp  triggered_aout.cpp
examples/digital/: CMakeLists.txt  main.cpp  main_stream.cpp  stream_test.cpp
examples/lidar/: CMakeLists.txt  main.cpp
examples/powersupply/: CMakeLists.txt  main.cpp
examples/voltmeter/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  analogin.cpp  analoginbuffer.cpp  analoginbuffer.h  buffer.cpp  channel.cpp  context.cpp  context_impl.cpp  context_impl.hpp  context_impl_private.cpp  context_impl_private.hpp  context_impl_v0.cpp  context_impl_v1.cpp  contextbuilder.cpp  contextbuilder_v1.cpp  device.cpp  devicebuilder.cpp  dmm.cpp  fmcomms.cpp  generic_impl.cpp  generic_impl.hpp  genericanalogin.cpp  genericanalogout.cpp  genericdevice.cpp  genericdigital.cpp  installed_devices.hpp  lidar.cpp  lidar_impl.cpp  lidar_impl.hpp  logger.cpp  logger.h  m2k.cpp  m2k_impl.cpp  m2k_impl.hpp  m2k_impl_private.cpp  m2k_impl_private.hpp  m2kanalogin.cpp  m2kanalogout.cpp  m2kcalibration.cpp  m2kcalibration_impl.cpp  (+21 more)
src/analog/: dmm.cpp  dmm_impl.cpp  dmm_impl.hpp  genericanalogin.cpp  genericanalogout.cpp  m2kanalogin.cpp  m2kanalogin_impl.cpp  m2kanalogin_impl.hpp  m2kanalogout.cpp  m2kanalogout_impl.cpp  m2kanalogout_impl.hpp  m2khardwaretrigger.cpp  m2kpowersupply.cpp  m2kpowersupply_impl.cpp  m2kpowersupply_impl.hpp  powersupply.cpp
src/analog/generic/: genericanalogin_impl.cpp  genericanalogin_impl.hpp  genericanalogout_impl.cpp  genericanalogout_impl.hpp
src/analog/private/: dmm_impl.cpp  genericanalogin_impl.cpp  genericanalogout_impl.cpp  m2kanalogin_impl.cpp  m2kanalogout_impl.cpp  m2khardwaretrigger_impl.cpp  m2khardwaretrigger_v0.24_impl.cpp  m2kpowersupply_impl.cpp  powersupply_impl.cpp
src/devices/FMCOMMS/: fmcomms.cpp  fmcomms.hpp  fmcomms.ini
src/devices/M2K/: m2k.cpp  m2k.hpp  m2k.ini  m2kanalogin.cpp  m2kanalogin.hpp
src/digital/: genericdigital.cpp  m2kdigital.cpp  m2kdigital_impl.cpp  m2kdigital_impl.hpp
src/digital/private/: genericdigital_impl.cpp  m2kdigital_impl.cpp
src/fake/: m2k_fake_impl.cpp  m2k_fake_impl.cpp.bak  m2k_fake_impl.hpp.bak  m2kanalogin_fake_impl.cpp  m2kanalogin_fake_impl.cpp.bak  m2kanalogin_fake_impl.hpp  m2kanalogin_fake_impl.hpp.bak  m2kanalogout_fake_impl.cpp  m2kanalogout_fake_impl.hpp  m2kcalibration_fake_impl.cpp  m2kcalibration_fake_impl.hpp  m2kdigital_fake_impl.cpp  m2kdigital_fake_impl.hpp  m2khardwaretrigger_fake_impl.cpp  m2khardwaretrigger_fake_impl.hpp  m2khardwaretrigger_v0.24_fake_impl.cpp  m2khardwaretrigger_v0.24_fake_impl.hpp  m2kpowersupply_fake_impl.cpp  m2kpowersupply_fake_impl.hpp
src/private/: context_impl.cpp  lidar_impl.cpp  m2k_impl.cpp  m2kcalibration_impl.cpp  m2khardwaretrigger_impl.cpp  m2khardwaretrigger_v0.24_impl.cpp
src/utils/: buffer.cpp  buffer.hpp  buffer_v0.cpp  buffer_v0.hpp  buffer_v1.cpp  buffer_v1.hpp  channel.cpp  channel.hpp  channel_v0.cpp  channel_v0.hpp  channel_v1.cpp  channel_v1.hpp  device.cpp  devicegeneric.cpp  devicegeneric.hpp  devicegeneric_v0.cpp  devicegeneric_v0.hpp  devicegeneric_v1.cpp  devicegeneric_v1.hpp  devicein.cpp  devicein.hpp  deviceout.cpp  deviceout.hpp  utils.cpp  utils_v0.cpp  utils_v1.cpp
src/utils/private/: buffer_impl.cpp  channel_impl.cpp  device_impl.cpp  devicegeneric_impl.cpp  devicein_impl.cpp  (+1 more)
tests/: main.py  (+21 more)
tools/m2kcli/: CMakeLists.txt  main.cpp
(+297 files in other folders)
